--- a/src/components/pizza-item/pizza-item.css
+++ b/src/components/pizza-item/pizza-item.css
@@ -5,3 +5,18 @@
 .card-title {
     text-transform: capitalize;
 }
+.card-text {
+    font-style: italic !important;
+}
+.price {
+    float: right;
+}
+button {
+    float: right;
+    padding: 5px !important;
+    color: #fff !important;
+}
+
+.card-body{
+    padding: 10px !important;
+}
