--- a/src/components/pizza-list/pizza-list.css
+++ b/src/components/pizza-list/pizza-list.css
@@ -10,5 +10,9 @@
 
 .paginator {
     position: absolute;
-    bottom: 14px;
+    bottom: 0;
+}
+
+.col-md-3.col-sm-12 {
+    margin-bottom: 6px;
 }
