add shoping cart route

--- a/src/components/pizza-item/pizza-item.css
+++ b/src/components/pizza-item/pizza-item.css
@@ -24,3 +24,8 @@ button {
 .card-body{
     padding: 10px !important;
 }
+
+.quantity-counter {
+    display: flex;
+    justify-content: center;
+}
