--- a/src/components/shopping-cart/shopping-cart.css
+++ b/src/components/shopping-cart/shopping-cart.css
@@ -33,3 +33,10 @@
     font-weight: 500;
     margin-bottom: 10px;
 }
+
+.menu > a {
+    margin: 0 7.5px !important;
+}
+.menu > a > button {
+    text-transform: capitalize;
+}
