--- a/src/components/nav-bar/nav-bar.css
+++ b/src/components/nav-bar/nav-bar.css
@@ -11,4 +11,9 @@ button, a {
 }
 .nav-container {
     /* height: 55px; */
+    position: fixed;
+    width: 100%;
+    z-index: 10000;
+    box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
+    top: 0;
 }
