--- a/src/components/shopping-cart/shopping-cart.css
+++ b/src/components/shopping-cart/shopping-cart.css
@@ -14,7 +14,7 @@
     background: #fff;
     padding: 25px;
     /* margin: 25px 0 0; */
-    margin-top: 25px !important;
+    /* margin-top: 25px !important; */
     border-radius: 8px;
     box-shadow: -5px 10px 60px -13px rgba(0,0,0,.2);
 }
